@@ -1062,7 +1062,7 @@ but for CD-quality sound you should instead use either
 or
 .B polyphase.
 If you are wondering which rate changing effects to use, you will want to read a
-detailed analysis of all of them at http://eakaw2.et.tu-dresden.de/~wilde/resample/resample.html
+detailed analysis of all of them at http://leute.server.de/wilde/resample.html
 .TP 10
 repeat \fIcount\fR
 Repeats the audio data \fIcount\fR times.  Requires disk space to store the data to be repeated.
